--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+Dies ist der digitale Garten von Katja Evertz. | [Impressum](https://www.katjaevertz.de/impressum-kontakt/)
