--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
   <body>
     <nav>{% include nav.html %}</nav>
     <div class="wrapper">
-      <main>{{ content }}</main>
+      <main>{{ content }}
+<p>Dies sind alle Notizen in diesem Garten. Dieses Netzwerk zeigt, wie die einzelnen Notizen untereinander verlinkt sind.</p>
+
+{% include notes_graph.html %}</main>
       <footer>{% include footer.html %}</footer>
     </div>
 
