--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -3,14 +3,6 @@ layout: default
 ---
 
 <article>
-  <div>
-    <h1>{{ page.title }}</h1>
-    <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
-      Last updated on {{ page.last_modified_at | date: "%B %-d, %Y" }}
-      {% endif %}
-    </time>
-  </div>
-
   <div id="notes-entry-container">
     <content>
       {{ content }}
@@ -32,16 +24,22 @@ layout: default
 
       <div style="font-size: 0.9em">
         <p>
-          There are no notes linking to this note.
+          Es verlinken keine Notizen hierher.
         </p>
       </div>
       {% endif %}
     </side>
   </div>
+  <div>
+    <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
+      Letzte Aktualisierung: {{ page.last_modified_at | date: "%d. %B %Y" }}
+      {% endif %}
+    </time>
+  </div>
 </article>
 
 <hr>
 
-<p>Here are all the notes in this garden, along with their links, visualized as a graph.</p>
+<p>Dies sind alle Notizen in diesem Garten. Dieses Netzwerk zeigt, wie die einzelnen Notizen untereinander verlinkt sind.</p>
 
 {% include notes_graph.html %}
