--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,3 +5,8 @@ layout: default
 <content>
   {{ content }}
 </content>
+<hr>
+
+<p>Dies sind alle Notizen in diesem Garten. Dieses Netzwerk zeigt, wie die einzelnen Notizen untereinander verlinkt sind.</p>
+
+{% include notes_graph.html %}
