--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -6,11 +6,10 @@ layout: default
   <div id="notes-entry-container">
     <content>
       {{ content }}
-      <p>This line appears after every note.</p>
     </content>
 
     <side style="font-size: 0.9em">
-      <h3 style="margin-bottom: 1em">Notes mentioning this note</h3>
+      <h3 style="margin-bottom: 1em">Erwähnungen in anderen Notizen</h3>
       {% if page.backlinks.size > 0 %}
       <div style="display: grid; grid-gap: 1em; grid-template-columns: repeat(1fr);">
       {% for backlink in page.backlinks %}
@@ -24,7 +23,7 @@ layout: default
 
       <div style="font-size: 0.9em">
         <p>
-          Es verlinken keine Notizen hierher.
+          Es verlinken keine anderen Notizen hierher.
         </p>
       </div>
       {% endif %}
@@ -32,7 +31,8 @@ layout: default
   </div>
   <div>
     <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
-      Letzte Aktualisierung: {{ page.last_modified_at | date: "%d. %B %Y" }}
+      Erstellt am: {{ page.created_at | date: "%d. %B %Y" }}
+	Letzte Aktualisierung: {{ page.last_modified_at | date: "%d. %B %Y" }}
       {% endif %}
     </time>
   </div>
