Datum und Links aktualisiert

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-Dies ist der digitale Garten von Katja Evertz. | [Impressum](https://www.katjaevertz.de/impressum-kontakt/)
+Dies ist der digitale Garten von Katja Evertz. | <a href="https://www.katjaevertz.de/impressum-kontakt/">Impressum</a>
