--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -31,7 +31,8 @@ layout: default
   </div>
   <div>
     <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
-      Erstellt am: {{ page.created_at | date: "%d. %B %Y" }}
+	{% include date-german.html date=page.date %}
+      Erstellt am: {{ page.date | date: "%d. %B %Y" }}
 	Letzte Aktualisierung: {{ page.last_modified_at | date: "%d. %B %Y" }}
       {% endif %}
     </time>
